[gd_scene load_steps=4 format=3 uid="uid://c3yw8vxrncpoa"]

[ext_resource type="Script" uid="uid://qbuqbppdeaur" path="res://scripts/ui/main_menu.gd" id="1_e66b0"]
[ext_resource type="Texture2D" uid="uid://dhyquu8luohra" path="res://icon.svg" id="1_sbiqi"]
[ext_resource type="Script" uid="uid://d3jifxt612f7v" path="res://scripts/ui/version.gd" id="2_ngy02"]

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 23.111084
offset_top = 13.0
offset_right = -23.111084
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e66b0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_sbiqi")

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="PlayButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Play"

[node name="OptionsButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions"]
layout_mode = 2
text = "Quit"

[node name="VersionLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "ver  0.1.0"
script = ExtResource("2_ngy02")

[node name="StudioLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Studio Name"

[node name="Logo" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture = ExtResource("1_sbiqi")
stretch_mode = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/QuitButton" to="." method="_on_options_button_pressed"]
