[gd_scene load_steps=16 format=3 uid="uid://c3yw8vxrncpoa"]

[ext_resource type="Script" uid="uid://qbuqbppdeaur" path="res://scripts/ui/main_menu.gd" id="1_e66b0"]
[ext_resource type="Script" uid="uid://daylw7kt2lwn6" path="res://scripts/resources/breakable_object_data.gd" id="2_fe2o3"]
[ext_resource type="Script" uid="uid://c4n457xse28h1" path="res://scripts/mouse_body.gd" id="3_1g8jr"]
[ext_resource type="Texture2D" uid="uid://lv61x8f11npe" path="res://assets/textures/main_menu_background.png" id="4_m1kxf"]
[ext_resource type="Texture2D" uid="uid://bskxjtp282cyw" path="res://assets/textures/animals/colom.png" id="5_7suek"]
[ext_resource type="Texture2D" uid="uid://c0wk6ddfc5jcj" path="res://assets/textures/jugar_button.png" id="5_uhagc"]
[ext_resource type="Texture2D" uid="uid://dsrtpj6cstm10" path="res://assets/textures/album_button.png" id="6_btxxm"]
[ext_resource type="Texture2D" uid="uid://df54mrgdx3m8y" path="res://assets/textures/animals/trencalos.png" id="6_otr3d"]
[ext_resource type="Texture2D" uid="uid://bgak6nbotwjrw" path="res://assets/textures/animals/trito.png" id="7_8ekit"]
[ext_resource type="PackedScene" uid="uid://b27nit2lokfdr" path="res://scenes/ui/options_menu.tscn" id="7_btxxm"]
[ext_resource type="Texture2D" uid="uid://b5fb2a052lgnf" path="res://assets/textures/animals/oliba.png" id="11_n4uci"]

[sub_resource type="Resource" id="Resource_1g8jr"]
script = ExtResource("2_fe2o3")
item_name = "PARAULINA"
letter_spawn_radius = 0.0
letter_spawn_force = 0.0
letter_spawn_rotation = 0.0
metadata/_custom_type_script = "uid://daylw7kt2lwn6"

[sub_resource type="Gradient" id="Gradient_uhagc"]
colors = PackedColorArray(0.95686275, 0.7490196, 0.58431375, 1, 0.8627451, 0.6156863, 0.4627451, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_btxxm"]
frequency = 0.167
fractal_lacunarity = 8.465
fractal_gain = 13.115
fractal_weighted_strength = 0.64

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uhagc"]
width = 1194
height = 934
noise = SubResource("FastNoiseLite_btxxm")
color_ramp = SubResource("Gradient_uhagc")
seamless = true

[node name="MainMenu" type="Control" node_paths=PackedStringArray("title_spawn_point")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_e66b0")
title_breakable_object_data = SubResource("Resource_1g8jr")
title_spawn_point = NodePath("TitleSpawnPoint")

[node name="MouseBody" type="StaticBody2D" parent="." groups=["mouse_body"]]
script = ExtResource("3_1g8jr")

[node name="TitleSpawnPoint" type="Marker2D" parent="."]
position = Vector2(960, 190)

[node name="MainMenuBackground" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 576.00006)
scale = Vector2(0.5629883, 0.5629883)
texture = ExtResource("4_m1kxf")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_uhagc")

[node name="Colom" type="Sprite2D" parent="."]
position = Vector2(638, 634)
texture = ExtResource("5_7suek")

[node name="Trito" type="Sprite2D" parent="."]
position = Vector2(348, 669)
texture = ExtResource("7_8ekit")

[node name="JugarButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 159.0
offset_top = -471.0
offset_right = 842.81464
offset_bottom = -333.25317
grow_vertical = 0
rotation = 0.21382767
pivot_offset = Vector2(369.15, 68.52)
texture_normal = ExtResource("5_uhagc")
stretch_mode = 0

[node name="Trencalos" type="Sprite2D" parent="."]
position = Vector2(554, 861)
texture = ExtResource("6_otr3d")

[node name="Oliba" type="Sprite2D" parent="."]
position = Vector2(879.00006, 809)
scale = Vector2(0.822884, 0.822884)
texture = ExtResource("11_n4uci")

[node name="AlbumButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -724.0
offset_top = -630.0
offset_right = -6.4091797
offset_bottom = 119.68335
grow_horizontal = 0
grow_vertical = 0
rotation = -0.21770908
pivot_offset = Vector2(386.995, 378.16)
texture_normal = ExtResource("6_btxxm")
stretch_mode = 0

[node name="OpcionsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 22.0
offset_top = -79.0
offset_right = 445.0
offset_bottom = -25.0
grow_vertical = 0
pivot_offset = Vector2(214.62, 28.855)
text = "Opcions
"

[node name="OptionsUI" parent="." instance=ExtResource("7_btxxm")]
visible = false

[connection signal="mouse_entered" from="JugarButton" to="." method="_on_jugar_button_mouse_entered"]
[connection signal="mouse_exited" from="JugarButton" to="." method="_on_jugar_button_mouse_exited"]
[connection signal="pressed" from="JugarButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="AlbumButton" to="." method="_on_album_button_mouse_entered"]
[connection signal="mouse_exited" from="AlbumButton" to="." method="_on_album_button_mouse_exited"]
[connection signal="pressed" from="AlbumButton" to="." method="_on_book_button_pressed"]
[connection signal="mouse_entered" from="OpcionsButton" to="." method="_on_opcions_button_mouse_entered"]
[connection signal="mouse_exited" from="OpcionsButton" to="." method="_on_opcions_button_mouse_exited"]
[connection signal="pressed" from="OpcionsButton" to="." method="_on_opcions_button_pressed"]
